# psystem

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win32  kernelSource.cl  main.cpp  psdistance.cpp  psystem.cpp  psystem.h
intersections/: CMakeLists.txt  Makefile  intersections.cpp  intersections.h  intersections.vim  main.cpp
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
test/collision2/: collision.gnupl  collision2.in
test/collision2-1/: collision.gnupl
test/collision2-2/: collision.gnupl  collision2.in
test/collision2-3/: collision.gnupl
test/collision2-4/: collision.gnupl  collision2.in
test/collision2-5/: collision.gnupl  collision2.in
test/random/: random.in
test/test1/: collision.gnupl  parameters.cfg
